dashboard.log
INFO:     Started server process [2677136]
INFO:     Waiting for application startup.
INFO:     Application startup complete.
INFO:     Uvicorn running on http://0.0.0.0:3002 (Press CTRL+C to quit)
INFO:     127.0.0.1:33034 - "GET /api/state HTTP/1.1" 200 OK
INFO:     127.0.0.1:48912 - "GET /api/state HTTP/1.1" 200 OK
INFO:     127.0.0.1:34142 - "GET / HTTP/1.1" 200 OK
INFO:     127.0.0.1:34142 - "GET /assets/index-87hhDiDG.js HTTP/1.1" 200 OK
INFO:     127.0.0.1:34146 - "GET /assets/index-D8OpNoXg.css HTTP/1.1" 200 OK
INFO:     127.0.0.1:34142 - "GET /api/dashboard HTTP/1.1" 200 OK
INFO:     127.0.0.1:34162 - "WebSocket /ws" [accepted]
INFO:     connection open
INFO:     127.0.0.1:34142 - "GET /api/dashboard HTTP/1.1" 200 OK
INFO:     127.0.0.1:46904 - "GET /api/memory HTTP/1.1" 200 OK
INFO:     127.0.0.1:40068 - "GET /api/skills HTTP/1.1" 200 OK
INFO:     127.0.0.1:40078 - "GET /api/sessions HTTP/1.1" 200 OK
INFO:     127.0.0.1:40078 - "GET /api/cron HTTP/1.1" 200 OK
INFO:     127.0.0.1:40078 - "GET /api/projects HTTP/1.1" 200 OK
INFO:     127.0.0.1:40078 - "GET /api/health HTTP/1.1" 200 OK
INFO:     127.0.0.1:40078 - "GET /api/agents HTTP/1.1" 200 OK
INFO:     127.0.0.1:44614 - "GET /api/chat/available HTTP/1.1" 500 Internal Server Error
ERROR:    Exception in ASGI application
Traceback (most recent call last):
  File "/home/mdwzrd/wzrd-dev/hermes/hermes-agent/venv/lib/python3.11/site-packages/uvicorn/protocols/http/httptools_impl.py", line 416, in run_asgi
    result = await app(  # type: ignore[func-returns-value]
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/mdwzrd/wzrd-dev/hermes/hermes-agent/venv/lib/python3.11/site-packages/uvicorn/middleware/proxy_headers.py", line 60, in __call__
    return await self.app(scope, receive, send)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/mdwzrd/wzrd-dev/hermes/hermes-agent/venv/lib/python3.11/site-packages/fastapi/applications.py", line 1159, in __call__
    await super().__call__(scope, receive, send)
  File "/home/mdwzrd/wzrd-dev/hermes/hermes-agent/venv/lib/python3.11/site-packages/starlette/applications.py", line 90, in __call__
    await self.middleware_stack(scope, receive, send)
  File "/home/mdwzrd/wzrd-dev/hermes/hermes-agent/venv/lib/python3.11/site-packages/starlette/middleware/errors.py", line 186, in __call__
    raise exc
  File "/home/mdwzrd/wzrd-dev/hermes/hermes-agent/venv/lib/python3.11/site-packages/starlette/middleware/errors.py", line 164, in __call__
    await self.app(scope, receive, _send)
  File "/home/mdwzrd/wzrd-dev/hermes/hermes-agent/venv/lib/python3.11/site-packages/starlette/middleware/cors.py", line 88, in __call__
    await self.app(scope, receive, send)
  File "/home/mdwzrd/wzrd-dev/hermes/hermes-agent/venv/lib/python3.11/site-packages/starlette/middleware/exceptions.py", line 63, in __call__
    await wrap_app_handling_exceptions(self.app, conn)(scope, receive, send)
  File "/home/mdwzrd/wzrd-dev/hermes/hermes-agent/venv/lib/python3.11/site-packages/starlette/_exception_handler.py", line 53, in wrapped_app
    raise exc
  File "/home/mdwzrd/wzrd-dev/hermes/hermes-agent/venv/lib/python3.11/site-packages/starlette/_exception_handler.py", line 42, in wrapped_app
    await app(scope, receive, sender)
  File "/home/mdwzrd/wzrd-dev/hermes/hermes-agent/venv/lib/python3.11/site-packages/fastapi/middleware/asyncexitstack.py", line 18, in __call__
    await self.app(scope, receive, send)
  File "/home/mdwzrd/wzrd-dev/hermes/hermes-agent/venv/lib/python3.11/site-packages/starlette/routing.py", line 660, in __call__
    await self.middleware_stack(scope, receive, send)
  File "/home/mdwzrd/wzrd-dev/hermes/hermes-agent/venv/lib/python3.11/site-packages/starlette/routing.py", line 680, in app
    await route.handle(scope, receive, send)
  File "/home/mdwzrd/wzrd-dev/hermes/hermes-agent/venv/lib/python3.11/site-packages/starlette/routing.py", line 276, in handle
    await self.app(scope, receive, send)
  File "/home/mdwzrd/wzrd-dev/hermes/hermes-agent/venv/lib/python3.11/site-packages/fastapi/routing.py", line 134, in app
    await wrap_app_handling_exceptions(app, request)(scope, receive, send)
  File "/home/mdwzrd/wzrd-dev/hermes/hermes-agent/venv/lib/python3.11/site-packages/starlette/_exception_handler.py", line 53, in wrapped_app
    raise exc
  File "/home/mdwzrd/wzrd-dev/hermes/hermes-agent/venv/lib/python3.11/site-packages/starlette/_exception_handler.py", line 42, in wrapped_app
    await app(scope, receive, sender)
  File "/home/mdwzrd/wzrd-dev/hermes/hermes-agent/venv/lib/python3.11/site-packages/fastapi/routing.py", line 120, in app
    response = await f(request)
               ^^^^^^^^^^^^^^^^
  File "/home/mdwzrd/wzrd-dev/hermes/hermes-agent/venv/lib/python3.11/site-packages/fastapi/routing.py", line 674, in app
    raw_response = await run_endpoint_function(
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/mdwzrd/wzrd-dev/hermes/hermes-agent/venv/lib/python3.11/site-packages/fastapi/routing.py", line 328, in run_endpoint_function
    return await dependant.call(**values)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/mdwzrd/wzrd-dev/remi-dashboard-web/backend/api/chat.py", line 299, in check_availability
    from run_agent import AIAgent
  File "/home/mdwzrd/.hermes/hermes-agent/run_agent.py", line 8820
    return final_response
IndentationError: unexpected indent
INFO:     127.0.0.1:44616 - "GET /api/chat/sessions HTTP/1.1" 200 OK
INFO:     127.0.0.1:42884 - "GET /api/profiles HTTP/1.1" 200 OK
INFO:     127.0.0.1:42884 - "GET /api/token-costs HTTP/1.1" 200 OK
INFO:     127.0.0.1:47286 - "GET /api/corrections HTTP/1.1" 200 OK
INFO:     127.0.0.1:59786 - "GET /api/corrections HTTP/1.1" 200 OK
INFO:     127.0.0.1:59792 - "GET /api/state HTTP/1.1" 200 OK
INFO:     127.0.0.1:56032 - "GET /api/corrections HTTP/1.1" 200 OK
INFO:     127.0.0.1:34818 - "GET /api/corrections HTTP/1.1" 200 OK
INFO:     127.0.0.1:54986 - "GET /api/corrections HTTP/1.1" 200 OK
INFO:     216.245.86.35:0 - "GET / HTTP/1.1" 200 OK
INFO:     216.245.86.35:0 - "GET /assets/index-87hhDiDG.js HTTP/1.1" 200 OK
INFO:     216.245.86.35:0 - "GET /assets/index-D8OpNoXg.css HTTP/1.1" 200 OK
INFO:     216.245.86.35:0 - "GET /api/dashboard HTTP/1.1" 200 OK
INFO:     216.245.86.35:0 - "WebSocket /ws" [accepted]
INFO:     connection open
INFO:     216.245.86.35:0 - "GET /api/dashboard HTTP/1.1" 200 OK
INFO:     216.245.86.35:0 - "GET /api/dashboard HTTP/1.1" 200 OK
INFO:     216.245.86.35:0 - "GET /api/dashboard HTTP/1.1" 200 OK
INFO:     127.0.0.1:58994 - "GET /api/corrections HTTP/1.1" 200 OK
INFO:     216.245.86.35:0 - "GET /api/dashboard HTTP/1.1" 200 OK
INFO:     216.245.86.35:0 - "GET /api/dashboard HTTP/1.1" 200 OK
INFO:     216.245.86.35:0 - "GET /api/dashboard HTTP/1.1" 200 OK
INFO:     216.245.86.35:0 - "GET /api/dashboard HTTP/1.1" 200 OK
INFO:     connection closed
INFO:     174.44.107.131:0 - "GET / HTTP/1.1" 200 OK
INFO:     174.44.107.131:0 - "GET /assets/index-D8OpNoXg.css HTTP/1.1" 200 OK
INFO:     174.44.107.131:0 - "GET /assets/index-87hhDiDG.js HTTP/1.1" 200 OK
INFO:     174.44.107.131:0 - "GET /api/dashboard HTTP/1.1" 200 OK
INFO:     174.44.107.131:0 - "WebSocket /ws" [accepted]
INFO:     connection open
INFO:     174.44.107.131:0 - "GET /api/dashboard HTTP/1.1" 200 OK
INFO:     174.44.107.131:0 - "GET /api/dashboard HTTP/1.1" 200 OK
INFO:     174.44.107.131:0 - "GET /api/dashboard HTTP/1.1" 200 OK
INFO:     174.44.107.131:0 - "GET /api/dashboard HTTP/1.1" 200 OK
INFO:     174.44.107.131:0 - "GET /api/dashboard HTTP/1.1" 200 OK
INFO:     174.44.107.131:0 - "GET /api/dashboard HTTP/1.1" 200 OK
INFO:     174.44.107.131:0 - "GET /api/dashboard HTTP/1.1" 200 OK
INFO:     174.44.107.131:0 - "GET /api/dashboard HTTP/1.1" 200 OK
INFO:     174.44.107.131:0 - "GET /api/dashboard HTTP/1.1" 200 OK
INFO:     174.44.107.131:0 - "GET /api/dashboard HTTP/1.1" 200 OK
INFO:     174.44.107.131:0 - "GET /api/dashboard HTTP/1.1" 200 OK
INFO:     174.44.107.131:0 - "GET /api/dashboard HTTP/1.1" 200 OK
INFO:     174.44.107.131:0 - "GET /api/dashboard HTTP/1.1" 200 OK
INFO:     174.44.107.131:0 - "GET /api/dashboard HTTP/1.1" 200 OK
INFO:     174.44.107.131:0 - "GET /api/dashboard HTTP/1.1" 200 OK
INFO:     174.44.107.131:0 - "GET /api/dashboard HTTP/1.1" 200 OK
INFO:     174.44.107.131:0 - "GET /api/dashboard HTTP/1.1" 200 OK
INFO:     174.44.107.131:0 - "GET /api/dashboard HTTP/1.1" 200 OK
INFO:     174.44.107.131:0 - "GET /api/dashboard HTTP/1.1" 200 OK
INFO:     174.44.107.131:0 - "GET /api/dashboard HTTP/1.1" 200 OK
INFO:     174.44.107.131:0 - "GET /api/dashboard HTTP/1.1" 200 OK
INFO:     174.44.107.131:0 - "GET /api/dashboard HTTP/1.1" 200 OK
INFO:     174.44.107.131:0 - "GET /api/dashboard HTTP/1.1" 200 OK
INFO:     174.44.107.131:0 - "GET /api/dashboard HTTP/1.1" 200 OK
INFO:     174.44.107.131:0 - "GET /api/dashboard HTTP/1.1" 200 OK
INFO:     Shutting down
INFO:     connection closed
INFO:     connection closed
INFO:     Waiting for application shutdown.
INFO:     Application shutdown complete.
INFO:     Finished server process [2677136]
